--- a/events.html
+++ b/events.html
@@ -22,7 +22,7 @@ title: Events
 
 <h3> TaxonWorks Together 2021 </h3>
 <ul>
-  <li>What: A community building event. See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2021"> for details.</a> </li>
+  <li>What: Our 2nd annual TaxonWorks community building event. <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2021">Details will be posted here.</a> </li>
   <li>When: December 6th-10th, 2021.</li>
   <li>Where: Zoom</li>
   <li>Who: Open to anyone.</li>
