updated UTC times for weekly meetings [skip ci]

--- a/events.html
+++ b/events.html
@@ -31,7 +31,7 @@ title: Events
 <h3> Weekly Digitization and TaxonWorks</h3>
 <ul>
   <li>What: Help grow a community of digitization expertise around TaxonWorks. A 1-2 hr weekly open question and answer session with a focus on natural history specimen digitization using TaxonWorks. The agenda is set by those with specific questions. Updates to TaxonWorks are briefly covered. Design and discussion of new functionality frequently happens. </li>
-  <li>When: <b>Wednesdays, weekly. 13:30 CDT (18:30 UTC), <span data-utc-to-local="18:30, 19:30"></span></b></li>
+  <li>When: <b>Wednesdays, weekly. 13:30 CST (19:30 UTC), <span data-utc-to-local="19:30, 20:30"></span></b></li>
   <li>Where: Zoom.  </li>
   <li>Who: Open to anyone. </li>
   <li><a href="/calendar/digitization.ics">Add to calendar (ICS file).</a></li>
@@ -40,7 +40,7 @@ title: Events
 <h3> Nomenclature and TaxonWorks </h3>
 <ul>
   <li>What: TaxonWorks excels at digitizing nomenclature and its metadata. The agenda is set by users with specific questions and use cases. In addition we highlight new functionality related to digitization of nomenclature. </li>
-  <li>When: <b>Wednesdays, alternating other week (currently <span data-alternate-week="March, 17 2021"></span>). 10:30 CDT (15:30 UTC), <span data-utc-to-local="15:30, 16:30"></span></b></li>
+  <li>When: <b>Wednesdays, alternating other week (currently <span data-alternate-week="March, 17 2021"></span>). 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
   <li>Where: Zoom. </li>
   <li>Who: Open to anyone.</li>
   <li><a href="/calendar/nomenclature.ics">Add to calendar (ICS file).</a></li>
