one more UTC change [skip ci]

--- a/events.html
+++ b/events.html
@@ -49,7 +49,7 @@ title: Events
 <h3> Guided exploration of nomenclature in TaxonWorks </h3>
 <ul>
   <li>What: A somewhat simpler, more guided exploration of nomenclature (and related data) handling in TaxonWorks. Sessions are often class-like for part or most of the time. Downstream sessions are planned with collaborators according to their needs and the general discussion that occurs in these meetings.</li>
-  <li>When: <b>Wednesdays, alternating other week (currently <span data-alternate-week="March, 24 2021"></span>). 10:30 CDT (15:30 UTC), <span data-utc-to-local="15:30, 16:30"></span></b></li>
+  <li>When: <b>Wednesdays, alternating other week (currently <span data-alternate-week="March, 24 2021"></span>). 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
   <li>Where: Zoom. </li>
   <li>Who: Lead and taught by Jim Woolley and colloaborators. Open to anyone.</li>
   <li><a href="/calendar/guided_nomenclature.ics">Add to calendar (ICS file).</a></li>
