updating events after tw together

--- a/events.html
+++ b/events.html
@@ -20,10 +20,10 @@ title: Events
 <em> We do not post the links here to prevent Zoom bombing.</em>
 </p>
 
-<h3> TaxonWorks Together 2021 </h3>
+<h3> TaxonWorks Together 2022 </h3>
 <ul>
-  <li>What: Our 2nd annual TaxonWorks community building event. <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2021">Details will be posted here.</a> </li>
-  <li>When: December 6th-10th, 2021.</li>
+  <li>What: Our 3rd annual TaxonWorks community building event.</li>
+  <li>When: late 2022. Dates to be decided</li>
   <li>Where: Zoom</li>
   <li>Who: Open to anyone.</li>
 </ul>
@@ -56,7 +56,13 @@ title: Events
 </ul>
 
 <h2> Past </h2>
-<em> As of mid 2020 </em>
+<em> As of end 2021 </em>
+
+<h3> TaxonWorks Together 2021 </h3>
+See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2021">the github-based homepage</a> for this event.
+
+<h3> TaxonWorks Together 2020 </h3>
+See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2020">the github-based homepage</a> for this event.
 
 <h3> TaxonWorks Late Nite </h3>
 <ul>
@@ -65,9 +71,6 @@ title: Events
   <li>Where: Zoom. </li>
   <li>Who: Open to anyone.</li>
 </ul>
-
-<h3> TaxonWorks Together 2020 </h3>
-See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2020">the github-based homepage</a> for this event.
 
 <script>
   function convertUTCToLocal(time) {
