--- a/events.html
+++ b/events.html
@@ -26,6 +26,7 @@ title: Events
   <li>When: late 2022. Dates to be decided</li>
   <li>Where: Zoom</li>
   <li>Who: Open to anyone.</li>
+  <li>Your Ideas: [Please submit your input for events](https://github.com/SpeciesFileGroup/taxonworks_together_2022) at TaxonWorks Together 2022.</li>
 </ul>
 
 <h3> Weekly Digitization and TaxonWorks</h3>
