changing taxonworks sessions structure
changing TW meeting structure for our open sessions. @mjy please review before committing. Thanks!

--- a/events.html
+++ b/events.html
@@ -29,32 +29,89 @@ title: Events
   <li>Your Ideas: <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2022">Please submit your input for events</a> at TaxonWorks Together 2022.</li>
 </ul>
 
-<h3> Weekly Digitization and TaxonWorks</h3>
-<ul>
-  <li>What: Help grow a community of digitization expertise around TaxonWorks. A 1-2 hr weekly open question and answer session with a focus on natural history specimen digitization using TaxonWorks. The agenda is set by those with specific questions. Updates to TaxonWorks are briefly covered. Design and discussion of new functionality frequently happens. </li>
-  <li>When: <b>Wednesdays, weekly. 13:30 CST (19:30 UTC), <span data-utc-to-local="19:30, 20:30"></span></b></li>
-  <li>Where: Zoom.  </li>
-  <li>Who: Open to anyone. </li>
-  <li><a href="/calendar/digitization.ics">Add to calendar (ICS file).</a></li>
-</ul>
+<h2> Events by Month </h2>
+<table>
+<thead>
+  <tr>
+    <th>Wednesday</th>
+    <th>Early &lt;span data-utc-to-local="16:30, 17:30"&gt;&lt;/span&gt;</th>
+    <th>Late &lt;span data-utc-to-local="19:30, 20:30"&gt;&lt;/span&gt;</th>
+    <th>Next date</th>
+    <th>Countdown</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td>1st</td>
+    <td>Nomenclature</td>
+    <td>Open</td>
+    <td></td>
+    <td>2 days from now</td>
+  </tr>
+  <tr>
+    <td>2nd</td>
+    <td>Digitization</td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>3rd</td>
+    <td>Matrices/Observations</td>
+    <td>Open</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>4th</td>
+    <td>Technical</td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+</tbody>
+</table>
 
-<h3> Nomenclature and TaxonWorks </h3>
+<h3> Nomenclature </h3>
 <ul>
-  <li>What: TaxonWorks excels at digitizing nomenclature and its metadata. The agenda is set by users with specific questions and use cases. In addition we highlight new functionality related to digitization of nomenclature. </li>
-  <li>When: <b>Wednesdays, alternating other week (currently <span data-alternate-week="March, 17 2021"></span>). 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
+  <li>What: TaxonWorks excels at digitizing nomenclature and its metadata. The agenda is set by users with specific questions and use cases. In addition we highlight new functionality related to digitization of nomenclature. Sessions are  sometimes class-like for part of the time. Downstream sessions are planned with collaborators according to their needs and the general discussion that occurs in these meetings. </li>
+  <li>When: <b>1st Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
   <li>Where: Zoom. </li>
   <li>Who: Open to anyone.</li>
-  <li><a href="/calendar/nomenclature.ics">Add to calendar (ICS file).</a></li>
-</ul>
+ </ul>
 
-<h3> Guided exploration of nomenclature in TaxonWorks </h3>
+<h3> Digitization </h3>
 <ul>
-  <li>What: A somewhat simpler, more guided exploration of nomenclature (and related data) handling in TaxonWorks. Sessions are often class-like for part or most of the time. Downstream sessions are planned with collaborators according to their needs and the general discussion that occurs in these meetings.</li>
-  <li>When: <b>Wednesdays, alternating other week (currently <span data-alternate-week="March, 24 2021"></span>). 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
-  <li>Where: Zoom. </li>
-  <li>Who: Lead and taught by Jim Woolley and colloaborators. Open to anyone.</li>
-  <li><a href="/calendar/guided_nomenclature.ics">Add to calendar (ICS file).</a></li>
-</ul>
+  <li>What: Help grow a community of digitization expertise around TaxonWorks. A 1-2 hr monthly open question and answer session with a focus on natural history specimen digitization using TaxonWorks. The agenda is set by those with specific questions. Updates to TaxonWorks are briefly covered. Design and discussion of new functionality frequently happens. </li>
+  <li>When: <b>2nd Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
+  <li>Where: Zoom.  </li>
+  <li>Who: Open to anyone. </li>
+ </ul>
+
+<h3> Matrices/Observations </h3>
+<ul>
+  <li>What: TaxonWorks supports building matrices. Join us in this 1-2 hr monthly open session focusing on building and using matrices and observations tools in TaxonWorks. Your questions set the agenda. Design and discussion of new functionality frequently happens.</li>
+  <li>When: <b>3rd Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
+  <li>Where: Zoom.  </li>
+  <li>Who: Open to anyone. </li>
+ </ul>
+
+<h3> Technical </h3>
+<ul>
+  <li>What: You are encouraged to contribute to the technical side of TaxonWorks any time. But, please do join us for a 1-2 hr monthly open session concentrating on software and services development. The agenda is set by you. Design and discussion of new functionality frequently happens. </li>
+  <li>When: <b>4th Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
+  <li>Where: Zoom.  </li>
+  <li>Who: Open to anyone. </li>
+ </ul>
+
+<h3> Open </h3>
+<ul>
+  <li>What: Help build the TaxonWorks Community. In this open session, all topics welcome. A 1-2 hr monthly open session. </li>
+  <li>When: <b>1st and 3rd Wednesdays, 13:30 CST (19:30 UTC), <span data-utc-to-local="19:30, 20:30"></span></b></li>
+  <li>Where: Zoom.  </li>
+  <li>Who: Open to anyone. </li>
+ </ul>
+
 
 <h2> Past </h2>
 <em> As of end 2021 </em>
