added a small paragraph

--- a/events.html
+++ b/events.html
@@ -29,7 +29,9 @@ title: Events
   <li>Your Ideas: <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2022">Please submit your input for events</a> at TaxonWorks Together 2022.</li>
 </ul>
 
-<h2> Events by Month </h2>
+<h2> Regular Events by Month </h2>
+Welcome to our new open session schedule. All these events are on Wednesdays at the same time every week. The flexible agendas are set by those attending the meetings.
+The “early sessions” have topics (but are flexible, as need be). In the “late” sessions, topics are determined by those who join.
 <table>
 <thead>
   <tr>
