removing some text per MJY input

--- a/events.html
+++ b/events.html
@@ -30,7 +30,7 @@ title: Events
 </ul>
 
 <h2> Regular Events by Month </h2>
-Welcome to our new open session schedule. All these events are on Wednesdays at the same time every week. The flexible agendas are set by those attending the meetings.
+All these events are on Wednesdays at the same time every week. The flexible agendas are set by those attending the meetings.
 The “early sessions” have topics (but are flexible, as need be). In the “late” sessions, topics are determined by those who join.
 <table>
 <thead>
