--- a/events.html
+++ b/events.html
@@ -80,6 +80,7 @@ The “early sessions” have topics (but are flexible, as need be). In the “l
   <li>When: <b>1st Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
   <li>Where: Zoom. </li>
   <li>Who: Open to anyone.</li>
+  <li><a href="https://docs.google.com/document/d/1_Qs6Zg8o4RRP23aFZnf9qr2cf24NxfTRfkSqLTgcbyA/edit?usp=sharing">Nomenclature Notes</a></li>
  </ul>
 
 <h3> Digitization </h3>
@@ -88,6 +89,7 @@ The “early sessions” have topics (but are flexible, as need be). In the “l
   <li>When: <b>2nd Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
   <li>Where: Zoom.  </li>
   <li>Who: Open to anyone. </li>
+  <li><a href="https://docs.google.com/document/d/1-18eh4KWrySrlKnujri8Fuw-h55zHwNK27yeNceUPlc/edit?usp=sharing">Digitization Notes</a></li>
  </ul>
 
 <h3> Matrices/Observations </h3>
@@ -96,6 +98,7 @@ The “early sessions” have topics (but are flexible, as need be). In the “l
   <li>When: <b>3rd Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
   <li>Where: Zoom.  </li>
   <li>Who: Open to anyone. </li>
+  <li><a href="https://docs.google.com/document/d/1m3bUp0qXjUlxiOt7xBo5e3q3WQuoPpOcyKTAbS9QncA/edit?usp=sharing">Matrices Notes</a></li>
  </ul>
 
 <h3> Technical </h3>
@@ -104,6 +107,7 @@ The “early sessions” have topics (but are flexible, as need be). In the “l
   <li>When: <b>4th Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
   <li>Where: Zoom.  </li>
   <li>Who: Open to anyone. </li>
+  <li><a href="https://docs.google.com/document/d/1Mp3P7MvR8Wi8EnPxSuUzGPTgTHinoBooO9hCqsGkZRA/edit?usp=sharing">Technical Notes</a></li>
  </ul>
 
 <h3> Open </h3>
@@ -112,6 +116,7 @@ The “early sessions” have topics (but are flexible, as need be). In the “l
   <li>When: <b>1st and 3rd Wednesdays, 13:30 CST (19:30 UTC), <span data-utc-to-local="19:30, 20:30"></span></b></li>
   <li>Where: Zoom.  </li>
   <li>Who: Open to anyone. </li>
+  <li><a href="https://docs.google.com/document/d/1mbh5Q0y-EiF-WP5_vVZgUIByLO8wKDiNookdJ8kVWFE/edit?usp=sharing">Open Notes</a></li>
  </ul>
 
 
