--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@ layout: default
 title: Species File Group - Home
 ---
 
-<br><br><br><br>
-
 <!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
-  <div class="container">
-    <h1 class="display-3">Species File Group</h1>
-    <p class="lead">The Species <small class="text-muted">(life on Earth)</small> File <small class="text-muted">(software)</small> Group <small class="text-muted">(collaborating community)</small> builds tools that facilitate cataloging, description, and study of the Earth’s species.</p>
+  <div class="container py-4">
+    <h1 class="display-5">Species File Group</h1>
+    <p class="">
+      The Species <small class="fw-light">(life on Earth)</small> File <small class="fw-light">(software)</small> Group <small class="fw-light">(collaborating community)</small> builds tools that facilitate cataloging, description, and study of the Earth’s species.
+    </p>
     <p><a class="btn btn-primary btn-lg" href="/about" role="button">Learn more &raquo;</a></p>
   </div>
-</div>
 
 <div class="container">
-  <!-- Example row of columns -->
   <div class="row">
     <div class="col-md-4">
       <h2>Software</h2>
