--- a/data.html
+++ b/data.html
@@ -2,20 +2,36 @@
 layout: default
 title: Data 
 ---
-<h1 class="mt-5">{{ page.title }}</h1>
-<p class="lead"> World class dataset curation facilitated by SFG collaborations </p>
+<div class="container">
+  <h1 class="mt-5">{{ page.title }}</h1>
+  <p class="lead"> World class datasets from SFG members and collaborators</p>
 
-<h2 class="mt-5">APIs</h2>
-<p class="lead"> Evolving at different rates to increase meaning and coverage of the data we curate</p>
-<ul>
-  <li><a href="http://globalnames.org/apps/">Various GlobalNames APIs</a></li>
-  <li><a href="http://api.taxonworks.org">TaxonWorks API</a></li>
-  <li>Species Files LSID resolver</li>
-  <li>Species Files Downloads</li>
-</ul> 
+  <div class="container">
+    <h2 class="mt-5">TaxonWorks data via APIs</h2>
+    <p class="lead"> Access data curated in SFG's instances of TaxonWorks </p>
+    <ul>
+      <li><a href="http://sfg.taxonworks.org/api/v1">Data from sfg.taxonworks.org</a></li>
+      <li><a href="http://api.taxonworks.org">Using a TaxonWorks API</a></li>
+      <li><a href="http://stats.taxonworks.org/">stats.taxonwork.org</a> a meta app with a data overview</li>
+    </ul> 
+  </div>
 
-<div class="alert alert-warning" role="alert">
-  TODO: Summarize static resources that don't fit in these categories.
+  <div class="container">
+    <h2 class="mt-5">Global Names</h2>
+    <p class="lead"> Access data indexed by Global Names  </p>
+    <ul>
+      <li><a href="http://globalnames.org/apps/">GlobalNames APIs</a></li>
+    </ul> 
+  </div>
+
+  <div class="container">
+    <div class="alert alert-warning" role="alert">
+      TODO: Summarize static resources that don't fit in these categories.
+      <ul>
+        <li>Species Files LSID resolver</li>
+        <li>Species Files Downloads</li>
+      </ul> 
+    </div>
+  </div>
+
 </div>
-
-
