--- a/software.html
+++ b/software.html
@@ -2,19 +2,24 @@
 layout: default
 title: Software 
 ---
-<br>
+<div class="container">
 <h1 class="mt-5">{{ page.title }}</h1>
-
 <p class="lead"> Our group and collaborators produce a wide range software, from small libraries to large web-apps, everything open-source </p>
+  <div class="container">
+    <h2> Global Names Architecture </h2>
+    <p class="lead"> Indexing the world's taxon names </p>
+    <p> The <a href="http://globalnames.org"> Global Names Architecture </a> is an umbrella for a wide range of software.  Code is available on <a href="https://github.com/gnames/">Github</a>. </p>
+  </div>
+  
+  <div class="container">
+  <h2> TaxonWorks </h2>
+  <p class="lead"> Describe life </p>
+  <p> <a href="http://taxonworks.org">TaxonWorks</a> is a 3rd (4th?) generation workbench that has a rich history of precursors include 3i, mx, and Species Files.</p>
+  </div>
 
-<h2> Global Names Architecture </h2>
-<p class="lead"> Indexing the world's taxon names </p>
-<p> The <a href="http://globalnames.org"> Global Names Architecture </a> is an umbrella for a wide range of software.  Code is available on <a href="https://github.com/gnames/">Github</a>. </p>
-
-<h2> TaxonWorks </h2>
-<p class="lead"> Describe life </p>
-<p> <a href="http://taxonworks.org">TaxonWorks</a> is a 3rd (4th?) generation workbench that has a rich history of precursors include 3i, mx, and Species Files.</p>
-
-<h2> Libraries, Gems, modules, etc. </h2>
-<p class="lead"> Multi-use utilities </p>
-<p> Our goal is to continually move toward isolating code into small, generally useful libraries.  See the GNA tools, and general utilities in the <a href="https://github.com/SpeciesFileGroup">Species File Group repositories on Github</a>.</p>
+  <div class="container">
+  <h2> Libraries, Gems, modules, etc. </h2>
+  <p class="lead"> Multi-use utilities </p>
+  <p> Our goal is to continually move toward isolating code into small, generally useful libraries.  See the GNA tools, and general utilities in the <a href="https://github.com/SpeciesFileGroup">Species File Group repositories on Github</a>.</p>
+  </div>
+</div>
