--- a/events.html
+++ b/events.html
@@ -2,9 +2,7 @@
 layout: default
 title: Events
 ---
-<br>
-<br>
-
+<div class="container">
 <h1 class="mt-5">{{ page.title }}</h1>
 <p class="lead"> Current and past events hosted by the Species File Group </p>
 
@@ -144,6 +142,8 @@ See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2020">the g
   <li>Where: Zoom. </li>
   <li>Who: Open to anyone.</li>
 </ul>
+
+</div>
 
 <script>
   function convertUTCToLocal (time) {
