Editing.  Bootstrap updates

--- a/about.html
+++ b/about.html
@@ -16,8 +16,21 @@ title: About
   </div>
 
   <div class="container">
-    <h2> People </h2>
+    <h2>Social</h2>
+    <p class="lead"> Like, follow, engage, and amplify </p>
+    <ul>
+      <li><a href="https://twitter.com/sppfilegroup">SFG Twitter</a></li>
+      <li><a href="https://twitter.com/taxonworks">TaxonWorks Twitter</a></li>
+      <li><a href="https://twitter.com/globalnames">Global Names Twitter</a></li>
+      <li><a href="https://twitter.com/mjyoder">Matt Twitter</a></li>
+      <li><a href="https://twitter.com/idbdeb">Debbie Twitter</a></li>
+      <li><a href="https://www.youtube.com/channel/UCKNr7QYwvVFcRfQAcMEAhLw">TaxonWorks Youtube</a></li>
+      <li><a href="https://gitter.im/SpeciesFileGroup/taxonworks">TaxonWorks Chat</a></li>
+    </ul>
+  </div>
 
+  <div class="container">
+    <h2> People </h2>
     <div class="container">
       <h3> Founder </h3>
       <p> The Species File Group was founded by David Eaded, retired. </p>
@@ -51,7 +64,6 @@ title: About
         <li> Jim Tucker </li>
         <li> Mike Maehr</li>
       </ul>
-
     </div>
 
     <div class="container">
