--- a/index.html
+++ b/index.html
@@ -3,36 +3,45 @@ layout: default
 title: Species File Group - Home
 ---
 
-<!-- Main jumbotron for a primary marketing message or call to action -->
-  <div class="container py-4">
-    <h1 class="display-5">Species File Group</h1>
-    <p class="">
-      The Species <small class="fw-light">(life on Earth)</small> File <small class="fw-light">(software)</small> Group <small class="fw-light">(collaborating community)</small> builds tools that facilitate cataloging, description, and study of the Earth’s species.
-    </p>
-    <p><a class="btn btn-primary btn-lg" href="/about" role="button">Learn more &raquo;</a></p>
-  </div>
-
 <div class="container">
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Software</h2>
-      <p>Specializing in <a href="http://taxonworks.org">workbenches</a> for biodiversity scientists and <a href="http://globalnames.org/">indexing <em>all</em> the Earth's species</a>, our group also produces a wide range of open-source libraries and utilities.</p>
-      <p><a class="btn btn-secondary" href="software.html" role="button">View details &raquo;</a></p>
+  <div class="container py-4">
+    <div class="p-5 mb-4 bg-light rounded-3 border">
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">Species File Group</h1>
+        <p class="fs-4">The Species <small class="fw-light">(life on Earth)</small> File <small class="fw-light">(software)</small> Group <small class="fw-light">(collaborating community)</small> builds tools that facilitate cataloging, description, and study of the Earth’s species.
+        <p><a class="btn btn-primary btn-lg" href="/about" role="button">Learn more &raquo;</a></p>
+      </div>
     </div>
-    <div class="col-md-4">
-      <h2>Data</h2>
-      <p>Decades long use of the tools and software used by us and our collaborators has resulted in high quality biodiversity data hosted by our group.</p>
-      <p><a class="btn btn-secondary" href="data.html" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Collaboration</h2>
-      <p>Our resources serve the scientific community through collaboration including global infrastructure like the <a href="http://catalogueoflife.org">Catalogue of Life</a>. Help us grow!</p>
-      <p><a class="btn btn-secondary" href="collaboration.html" role="button">View details &raquo;</a></p>
+
+    <div class="row align-items-md-stretch">
+      <div class="col-md-4">
+        <div class="h-100 p-5 bg-light border rounded-3">
+          <h2>Software</h2>
+          <p>Specializing in <a href="http://taxonworks.org">workbenches</a> for biodiversity scientists and <a href="http://globalnames.org/">indexing <em>all</em> the Earth's species</a>, our group also produces a wide range of open-source libraries and utilities.</p>
+          <p><a class="btn btn-outline-secondary" href="software.html" role="button">View details &raquo;</a></p>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="h-100 p-5 bg-light border rounded-3">
+          <h2>Collaboration</h2>
+          <p>Our resources serve the scientific community through collaboration including global infrastructure like the <a href="http://catalogueoflife.org">Catalogue of Life</a>. Help us grow!</p>
+          <p><a class="btn btn-outline-secondary" href="collaboration.html" role="button">View details &raquo;</a></p>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="h-100 p-5 bg-light border rounded-3">
+          <h2>Data</h2>
+          <p>Decades long curation utilizing SFG software by our team and <a href="/collaboration.html">collaborators</a> has resulted in high quality biodiversity data.</p>
+          <p><a class="btn btn-outline-secondary" href="data.html" role="button">View details &raquo;</a></p>
+        </div>
+      </div>
+
     </div>
   </div>
 
-  <br><br>
-  <div class="row">
+  <div class="container pt-5">
     <div class="col-md-13">
       <h3>Give</h3>
       <p class="lead">You can financially support the efforts of the Species File Group and its collaborators, coming soon- donate via the University of Illinois.</a></p>
