lab URLs added where I could find them

--- a/collaboration.html
+++ b/collaboration.html
@@ -96,11 +96,11 @@ title: Collaboration
     <h2 class="mt-5">Labs</h2>
     <p class="lead"> Labs using SFG infrastructure in return guiding us with feedback and direction</p>
     <ul>
-      <li>Adriano Kury</li>
-      <li>Dean's Lab, Penn State</li>
+      <li><a href="https://mndi.museunacional.ufrj.br/aracnologia/aracnol.htm>Adriano Kury's Arachno Lab<a/></li>
+        <li><a href="https://sites.psu.edu/deanslab/">Dean's Lab, Penn State</a></li>
       <li>Smith Lab</li>
-      <li>Dietrich Lab</li>
-      <li>Heraty Lab</li>
+        <li><a href="https://leafhopper.inhs.illinois.edu/">Dietrich Leafhopper Lab</a></li>
+        <li><a href="https://hymenoptera.ucr.edu/hymenopteran_systematics.html">Heraty Lab</a></li>
       <li>Woolley Lab</li>
       <li>Wharton Lab</li>
     </ul>
